[gd_scene load_steps=6 format=3 uid="uid://ccxgvr8uaoppg"]

[ext_resource type="FontFile" uid="uid://pcb2oduw3701" path="res://Asset/Font/comic-sans-ms/COMIC.TTF" id="1"]
[ext_resource type="Script" path="res://Menu/Start/Load_Game.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://c82xa8wj5isqy" path="res://Asset/Image/Background/Gold_Coins.jpg" id="3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fs8ce"]
texture = ExtResource("3")

[sub_resource type="FontVariation" id="FontVariation_wdybp"]
base_font = ExtResource("1")
variation_embolden = 0.5

[node name="Load_Game" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_fs8ce")
script = ExtResource("2")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 11
theme_override_fonts/font = SubResource("FontVariation_wdybp")
theme_override_font_sizes/font_size = 80
text = "New Game"
horizontal_alignment = 1

[node name="Divider" type="Label" parent="VBox"]
layout_mode = 2

[node name="Saves" type="ScrollContainer" parent="VBox"]
custom_minimum_size = Vector2(800, 400)
layout_mode = 2
size_flags_horizontal = 4

[node name="ItemList" type="ItemList" parent="VBox/Saves"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
auto_height = true

[node name="Buttons" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 150
alignment = 1

[node name="Back" type="Button" parent="VBox/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "   Back   "

[node name="Load" type="Button" parent="VBox/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "   Load   "

[node name="Delete" type="Button" parent="VBox/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "Delete"

[connection signal="pressed" from="VBox/Buttons/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="VBox/Buttons/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="VBox/Buttons/Delete" to="." method="_on_Delete_pressed"]
